--- a/.env
+++ b/.env
@@ -1,30 +1,23 @@
-# Website Launch Countdown Configuration
-# This file controls the countdown timer on the website
+# ADUSTECH Website Countdown Configuration
+# ==========================================
 
-# COUNTDOWN SETTINGS
-# ==================
+# Countdown duration in MINUTES
+# This makes it easy to test and configure
+# Examples:
+#   COUNTDOWN_MINUTES=10    → 10 minutes countdown
+#   COUNTDOWN_MINUTES=60    → 1 hour countdown
+#   COUNTDOWN_MINUTES=600   → 10 hours countdown
+#   COUNTDOWN_MINUTES=1440  → 24 hours (1 day) countdown
+# 
+# Set to 0 to disable countdown and make website immediately accessible
+COUNTDOWN_MINUTES=10
 
 # Enable or disable countdown mode
-# Set to 'true' to show countdown page, 'false' to show main website
+# Set to false to make website immediately accessible regardless of time
 COUNTDOWN_ENABLED=true
 
-# COUNTDOWN DURATION
-# ==================
-
-# Option 1: Set hours from current time
-# The countdown will start from when the page first loads
-# Change this value to set different countdown durations
-COUNTDOWN_HOURS=1
-
-# Option 2: Set a specific launch date/time (UTC)
-# Format: YYYY-MM-DDTHH:mm:ssZ
-# Example: 2026-02-06T00:00:00Z
-# Leave empty to use COUNTDOWN_HOURS instead
+# Advanced: You can also set a specific launch date instead
+# Format: YYYY-MM-DDTHH:mm:ssZ (UTC)
+# Example: LAUNCH_DATE=2026-02-06T12:00:00Z
+# Leave empty to use COUNTDOWN_MINUTES
 LAUNCH_DATE=
-
-# NOTES
-# =====
-# - The countdown persists in browser localStorage
-# - Once a countdown starts, changing these values won't affect existing countdowns
-# - To reset the countdown, users must clear their browser localStorage
-# - Or wait for the countdown to naturally expire
